fix build system

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,34 @@
 *~
 *.a
 *.o
+*.dll
 *.so
 *.cmi
 *.cmx
+*.cmxs
 *.cmxa
 *.cmo
 *.cma
+*.cmt
+*.opt
+*.run
 *.cmti
 *.annot
 *.exe
-*.dll
 *.lib
 *.obj
 *.log
 *.cache
 *.status
 *.omc
+*.out
+*.tar.gz
+*.tar.xz
+*.idoc
 /setup.ml
 /.omakedb*
 /_oasis
 /src/config.h
+/src/config.h.in
 /src/configure
 /src/autom4te.cache/
