--- a/src/configure.ac
+++ b/src/configure.ac
@@ -4,5 +4,5 @@ AC_PROG_CC
 AC_CONFIG_HEADERS([config.h])
 AC_USE_SYSTEM_EXTENSIONS
 AC_CHECK_HEADERS(errno.h)
-AC_C_BIGENDIAN([AC_DEFINE(CRYPTOHASH_BIG_ENDIAN_HOST,1)],[AC_DEFINE(CRYPTOHASH_LITTLE_ENDIAN_HOST,1)])
+AC_C_BIGENDIAN
 AC_OUTPUT
