--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,68 @@
 /src/config.h.in
 /src/configure
 /src/autom4te.cache/
+src/c_md2.c
+src/c_md4.c
+src/c_md5.c
+src/c_ripemd128.c
+src/c_ripemd160.c
+src/c_sha1.c
+src/c_sha2big.c
+src/c_sha2small.c
+src/c_sha3.c
+src/c_tiger.c
+src/c_whirlpool.c
+src/cinc_md2.inc
+src/cinc_md4.inc
+src/cinc_md5.inc
+src/cinc_ripemd128.inc
+src/cinc_ripemd160.inc
+src/cinc_sha1.inc
+src/cinc_sha224.inc
+src/cinc_sha256.inc
+src/cinc_sha384.inc
+src/cinc_sha3_224.inc
+src/cinc_sha3_256.inc
+src/cinc_sha3_384.inc
+src/cinc_sha3_512.inc
+src/cinc_sha512.inc
+src/cinc_tiger.inc
+src/cinc_tiger2.inc
+src/cinc_whirlpool.inc
+src/cryptohash_md2.ml
+src/cryptohash_md2.mli
+src/cryptohash_md4.ml
+src/cryptohash_md4.mli
+src/cryptohash_md5.ml
+src/cryptohash_md5.mli
+src/cryptohash_ripemd128.ml
+src/cryptohash_ripemd128.mli
+src/cryptohash_ripemd160.ml
+src/cryptohash_ripemd160.mli
+src/cryptohash_sha1.ml
+src/cryptohash_sha1.mli
+src/cryptohash_sha224.ml
+src/cryptohash_sha224.mli
+src/cryptohash_sha256.ml
+src/cryptohash_sha256.mli
+src/cryptohash_sha384.ml
+src/cryptohash_sha384.mli
+src/cryptohash_sha3_224.ml
+src/cryptohash_sha3_224.mli
+src/cryptohash_sha3_256.ml
+src/cryptohash_sha3_256.mli
+src/cryptohash_sha3_384.ml
+src/cryptohash_sha3_384.mli
+src/cryptohash_sha3_512.ml
+src/cryptohash_sha3_512.mli
+src/cryptohash_sha512.ml
+src/cryptohash_sha512.mli
+src/cryptohash_tiger.ml
+src/cryptohash_tiger.mli
+src/cryptohash_tiger2.ml
+src/cryptohash_tiger2.mli
+src/cryptohash_whirlpool.ml
+src/cryptohash_whirlpool.mli
+src/extrun
+src/hashsum
+src/qtest
